// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label Input field renders a marked input field in normal state  1`] = `
<div
  className="border-dark border border-opacity-25 rounded-md  w-64 flex flex-row items-start content-center px-1 hover:border-grey-shd1 focus-within:border-opacity-100 bg-white label-container"
>
  <input
    className="px-3 py-1 outline-none"
    style={
      Object {
        "width": "100%",
      }
    }
    type="search"
  />
  <div
    className="pt-2 pr-1 "
  >
    
  </div>
  <div
    className="pr-1 pt-2 cursor-pointer"
  >
    <svg
      className="w-3 h-3"
      fill="#8D9A9E"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
        fillRule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`Label Input field renders a marked input field with error icon  1`] = `
<div
  className="border-error border rounded-md  w-64 flex flex-row items-start content-center px-1 hover:border-grey-shd1 focus-within:border-opacity-100 bg-white label-container"
>
  <input
    className="px-3 py-1 outline-none"
    style={
      Object {
        "width": "100%",
      }
    }
    type="search"
  />
  <div
    className="pt-2 pr-1 "
  >
    <svg
      className="w-3 h-3"
      fill="#FE544A"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    className="pr-1 pt-2 cursor-pointer"
  >
    <svg
      className="w-3 h-3"
      fill="#8D9A9E"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
        fillRule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`Label Input field renders a marked input field with success icon   1`] = `
<div
  className="border-success border rounded-md  w-64 flex flex-row items-start content-center px-1 hover:border-grey-shd1 focus-within:border-opacity-100 bg-white label-container"
>
  <input
    className="px-3 py-1 outline-none"
    style={
      Object {
        "width": "100%",
      }
    }
    type="search"
  />
  <div
    className="pt-2 pr-1 "
  >
    <svg
      className="w-3 h-3"
      fill="#07B255"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    className="pr-1 pt-2 cursor-pointer"
  >
    <svg
      className="w-3 h-3"
      fill="#8D9A9E"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
        fillRule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`Label Input field renders anormal input field with no icon   1`] = `
<div
  className="border-dark border border-opacity-25 rounded-md  w-64 flex flex-row items-start content-center px-1 hover:border-grey-shd1 focus-within:border-opacity-100 bg-white label-container"
>
  <input
    className="px-3 py-1 outline-none"
    style={
      Object {
        "width": "100%",
      }
    }
    type="search"
  />
  <div
    className="pt-2 pr-1 "
  >
    
  </div>
  <div
    className="pr-1 pt-2 cursor-pointer"
  >
    <svg
      className="w-3 h-3"
      fill="#8D9A9E"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
        fillRule="evenodd"
      />
    </svg>
  </div>
</div>
`;
